Added new project.

--- a/index.html
+++ b/index.html
@@ -542,6 +542,34 @@
                   </div>
                 </div>
               </a>
+              <a
+                href="https://bighive.netlify.app/"
+                class="project-card"
+                data-project="1"
+                target="_blank"
+              >
+                <div class="project-img">
+                  <img
+                    src="assets/big-hive.webp"
+                    alt="Project Image"
+                    width="300"
+                    height="300"
+                  />
+                </div>
+
+                <div class="project-details">
+                  <h3 class="project-name">Big Hive</h3>
+                  <p class="project-desc">
+                    Fashion website landing page with animations, slider and
+                    dark mode.
+                  </p>
+                  <div class="project-tools">
+                    <span>HTML5</span>
+                    <span>CSS</span>
+                    <span>JavaScript</span>
+                  </div>
+                </div>
+              </a>
 
               <a
                 href="https://publikphigor-web-agency.netlify.app/"
@@ -634,7 +662,7 @@
 
               <a
                 href="https://publikphigor-csa.netlify.app/"
-                class="project-card"
+                class="project-card hide hidden-project"
                 data-project="5"
                 target="_blank"
               >
