--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="Portfolio Website" />
     <meta
       name="description"
-      content="Koladele Olaitan is a frontend developer in Nigeria. He speaks HTML, CSS, and JavaScript fluently. He has a passion for contributing to open-source."
+      content="Koladele Olaitan is a frontend developer in Nigeria. He speaks HTML, CSS, and JavaScript (React) fluently. He has a passion for contributing to open-source."
     />
     <meta
       name="keywords"
@@ -227,12 +227,17 @@
               <img src="assets/skill-line-l.svg" alt="Skill Line" width="100" height="100" />
             </span>
 
-            <h3 class="skill">CSS3 (Sass)</h3>
+            <h3 class="skill">CSS3 & SCSS</h3>
             <span class="skill-line">
               <img src="assets/skill-line-l.svg" alt="Skill Line" width="100" height="100" />
             </span>
 
             <h3 class="skill">JavaScript</h3>
+            <span class="skill-line">
+              <img src="assets/skill-line-l.svg" alt="Skill Line" width="100" height="100" />
+            </span>
+
+            <h3 class="skill">Typescript</h3>
             <span class="skill-line">
               <img src="assets/skill-line-l.svg" alt="Skill Line" width="100" height="100" />
             </span>
@@ -243,6 +248,16 @@
             </span>
 
             <h3 class="skill">Bootstrap</h3>
+            <span class="skill-line">
+              <img src="assets/skill-line-l.svg" alt="Skill Line" width="100" height="100" />
+            </span>
+
+            <h3 class="skill">Tailwind CSS</h3>
+            <span class="skill-line">
+              <img src="assets/skill-line-l.svg" alt="Skill Line" width="100" height="100" />
+            </span>
+
+            <h3 class="skill">APIs (AJAX, Fetch, Axios)</h3>
             <span class="skill-line">
               <img src="assets/skill-line-l.svg" alt="Skill Line" width="100" height="100" />
             </span>
