Changed page title.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       name="keywords"
       content="Frontend developer, Frontend developer in Nigeria, JavaScript developer, portfolio website"
     />
-    <title>Koladele Olaitan - Frontend Developer in Nigeria</title>
+    <title>Koladele Olaitan Portfolio - Frontend Developer</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon.png" />
 
     <!-- ==== Google Fonts ==== -->
