Added canonical tag.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       content="Frontend developer, Frontend developer in Nigeria, JavaScript developer, portfolio website"
     />
     <title>Koladele Olaitan Portfolio - Frontend Developer</title>
+    <link rel="canonical" href="https://koladeleolaitan.com/" />
     <link rel="icon" type="image/x-icon" href="assets/favicon.png" />
 
     <!-- ==== Google Fonts ==== -->
