Added resume website.

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </nav>
 
         <div class="nav-btn">
-          <a href="assets/Koladele_Olaitan_Resume.pdf" class="btn" download=""> Resume </a>
+          <a href="https://koladele-resume.netlify.app/" class="btn"> Resume </a>
         </div>
       </div>
     </header>
@@ -139,7 +139,7 @@
             <a href="https://publikphigor.me/blog/" target="_blank">My Blog</a>
           </li>
           <li>
-            <a href="assets/Koladele_Olaitan_Resume.pdf" download="">Resume</a>
+            <a href="https://koladele-resume.netlify.app/">Resume</a>
           </li>
         </ul>
         <div class="mobile-social-links">
