Updated Web Agency Project.

--- a/index.html
+++ b/index.html
@@ -396,6 +396,7 @@
                     <span>CSS (Sass)</span>
                     <span>JavaScript</span>
                     <span>Bootstrap</span>
+                    <span>GSAP</span>
                   </div>
                 </div>
               </a>
