Modified hero text.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
       property="og:image"
       content="https://koladeleolaitan.com/assets/meta-image.png"
     />
-    <meta property="og:type" content="Portfolio Website" />
     <meta
       name="description"
       content="Koladele Olaitan is a frontend developer in Nigeria. He speaks HTML, CSS, and JavaScript (React) fluently. He has a passion for contributing to open-source."
@@ -241,10 +240,12 @@
             Olaitan
           </h1>
           <p class="hero-text">
-            I build fascinating websites that are mobile responsive. I pay
-            particular attention to SEO best practices, speed optimization and
-            accesibility.
+            I am a Frontend Developer with 3 years of experience in the web
+            devlopment industry. I use my skills in React.js, Next.js, CSS
+            (Bootstrap & Tailwind), JavaScript, and TypeScript to deploy amazing
+            and production-ready web applications.
           </p>
+          <p>I love networking and contibuting to Open Source!</p>
           <div class="hero-btn">
             <a href="mailto:koladeleolaitan@gmail.com" class="btn">Hire Me!</a>
           </div>
@@ -480,8 +481,9 @@
             <div
               class="project-number hide hidden-number"
               data-project-number="5"
-              >6</div
             >
+              6
+            </div>
             <div
               class="timeline-path hide hidden-path"
               data-timeline-number="6"
@@ -492,8 +494,9 @@
             <div
               class="project-number hide hidden-number"
               data-project-number="7"
-              >7</div
             >
+              7
+            </div>
             <div
               class="timeline-path hide hidden-path"
               data-timeline-number="8"
@@ -504,8 +507,9 @@
             <div
               class="project-number hide hidden-number"
               data-project-number="8"
-              >8</div
             >
+              8
+            </div>
           </div>
 
           <div class="project-cards-container">
@@ -623,9 +627,9 @@
 
                 <div class="project-details">
                   <h3 class="project-name">TWFNFT Website Clone</h3>
-                  <p class="project-desc"
-                    >Cloned this NFT website using Sass and JavaScript.</p
-                  >
+                  <p class="project-desc">
+                    Cloned this NFT website using Sass and JavaScript.
+                  </p>
                   <div class="project-tools">
                     <span>HTML5</span>
                     <span>CSS (Sass)</span>
