--- a/index.html
+++ b/index.html
@@ -240,12 +240,16 @@
             Olaitan
           </h1>
           <p class="hero-text">
-            I am a Frontend Developer with 3 years of experience in the web
-            devlopment industry. I use my skills in React.js, Next.js, CSS
-            (Bootstrap & Tailwind), JavaScript, and TypeScript to deploy amazing
-            and production-ready web applications.
+            With a rich 4-year journey in web development, I specialize in
+            creating exceptional web experiences. My expertise spans a variety
+            of technologies, ensuring versatile solutions for diverse needs.
+            From dynamic interfaces to seamless interactions, I bring a creative
+            touch to every project. <br />
+            Let's collaborate to transform your ideas into impactful web
+            applications. Explore my portfolio to discover the diverse range of
+            projects that showcase my commitment to crafting engaging digital
+            experiences.
           </p>
-          <p>I love networking and contibuting to Open Source!</p>
           <div class="hero-btn">
             <a href="mailto:koladeleolaitan@gmail.com" class="btn">Hire Me!</a>
           </div>
@@ -548,6 +552,35 @@
               </a>
 
               <a
+                href="https://emmahux-portfolio-v2.vercel.app/"
+                class="project-card"
+                data-project="1"
+                target="_blank"
+              >
+                <div class="project-img">
+                  <img
+                    src="assets/emmahux.webp"
+                    alt="Project Image"
+                    width="300"
+                    height="300"
+                  />
+                </div>
+
+                <div class="project-details">
+                  <h3 class="project-name">Emmanuel Adeleye (Portfolio)</h3>
+                  <p class="project-desc">
+                    Portfolio website for a friend. Built with React, Tailwind,
+                    and GSAP.
+                  </p>
+                  <div class="project-tools">
+                    <span>React</span>
+                    <span>Tailwind</span>
+                    <span>GSAP</span>
+                  </div>
+                </div>
+              </a>
+
+              <a
                 href="https://publikphigor-web-agency.netlify.app/"
                 class="project-card"
                 data-project="2"
@@ -577,35 +610,6 @@
                     <span>JavaScript</span>
                     <span>Bootstrap</span>
                     <span>GSAP</span>
-                  </div>
-                </div>
-              </a>
-
-              <a
-                href="https://www.emmanuelpriestley.xyz/"
-                class="project-card"
-                data-project="1"
-                target="_blank"
-              >
-                <div class="project-img">
-                  <img
-                    src="assets/emmahux.webp"
-                    alt="Project Image"
-                    width="300"
-                    height="300"
-                  />
-                </div>
-
-                <div class="project-details">
-                  <h3 class="project-name">Emmanuel Adeleye (Portfolio)</h3>
-                  <p class="project-desc">
-                    First dark mode themed website I worked on. Played with CSS
-                    animations.
-                  </p>
-                  <div class="project-tools">
-                    <span>HTML5</span>
-                    <span>CSS</span>
-                    <span>JavaScript</span>
                   </div>
                 </div>
               </a>
